--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body{
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     font-weight: lighter;
+    
 }
 button{
     font-family: 'PlayMe';
@@ -63,22 +64,23 @@ button:hover{
     margin-top: 20%;
 }
 
-.input{
+#input{
     width: 400px;
     height: 50px;
-    border: transparent;
+    border: none;
     border-bottom: 2px solid #3f3f3f;
-    background: linear-gradient(to right, rgba(27, 31, 253, 0.1),transparent 50%,transparent 50%, rgba(50, 27, 253, 0.1) 100%);
+    background: linear-gradient(to right, rgba(27, 31, 253, 0.1),transparent 40%, transparent 60%, rgba(50, 27, 253, 0.1) 100%);
     transition: 0.3s linear;
     font-family: 'PlayMe';
     letter-spacing: 1px;
     font-size: 1.6em;
-    color: #5885ff;
+    color: #122d77;
 }
   
-.input:focus {
-    border: 2px solid #244cff;
-    color: #244cff;
+#input:focus {
+    outline: none;
+    border: 2px solid #244cff transparent;
+    color: #243fb4;
     box-shadow: 1px 1px 5px #5885ff;
     font-size: 1.9em;
 }
@@ -91,7 +93,7 @@ button:hover{
     position: absolute;
     top: 1vh;
     right: 1.5vh;
-    font-size: 6vw;
+    font-size: 5vw;
     border: 1px solid white;
     border-radius: 3px;
     color: white;
@@ -103,12 +105,14 @@ button:hover{
     width: 15%;
     position: absolute;
     top: 1vh;
+    left: 0.5vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    
 }
 #lives *{
-    width: 60px;
+    width: 50px;
 }
 #instruct{
     position: fixed;
@@ -120,12 +124,12 @@ button:hover{
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
+
     z-index: 999;
 
 }
 .popup{
     text-decoration: 2px underline solid rgba(0, 0, 0, 0.74);
-    
 }
 .instruct-content{
     position: absolute;
@@ -148,9 +152,10 @@ button:hover{
     position: absolute;
     top: 0;
     right: 0;
+    box-shadow: inset 0 0 1px rgba(39, 57, 136, 0.76), 0 0 1px 1px rgba(39, 57, 136, 0.76) ;
     border: 2px solid rgba(27, 151, 253, 0.6);
     padding: 1px 10px;
-    color: #ff000094;
+    color: #000000c7;
     font-size: 30px;
     cursor: pointer;
 }
@@ -163,14 +168,17 @@ button:hover{
     font-size: 5em;
     color: #244cff;
 }
+#play-again, #Home{
+    font-size: 1.5em;
+}
 @media screen and (max-width: 768px) {
     .title {
         font-size: 5em;
-        font-weight: 900;
+        font-weight: lighter;
     }
 
-    .input {
-        width: 80%; 
+    #input {
+        width: 90%; 
     }
     .play-button{
         font-size: 2.5em;
@@ -178,4 +186,26 @@ button:hover{
     .message{
         font-size: 1.8em;
     }
+    .lists {
+        font-size: 1.5em;
+    }
+    #box-close {
+        font-size: 20px;
+        padding: 2px;
+    }
+    .instruct-content {
+        width: 75%;
+        padding: 15px;
+    }
+    .popup{
+        font-size: 3.4em;
+    }
+    .lists{
+        font-size: 2em;
+    }
+    #lives{
+        left:4vw
+    }
+
+
 }
