--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,64 @@ button:hover{
 #play-again, #Home{
     font-size: 1.5em;
 }
+#gameboard {
+    position: relative;
+    width: 50vw;
+    height: 50vh;
+    border: 1px solid black;
+  }
+  
+  #spaceship {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%); /* center the spaceship initially */
+    
+  }
+  
+  #bullet {
+    position: absolute;
+    width: 10px;
+    height: 25px;
+    background-color: red;
+    visibility: hidden;
+    border-radius: 50%;
+  }
+  
+  #enemy {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: url('enemy.png');
+  }
+
+
+
+
+
+.zombie-image {
+    position: absolute;
+    bottom: -100px;
+    border-radius: 50%;
+    opacity: 0.5;
+    animation: flying 5s infinite ease-in;
+    z-index: 2;
+    width: 30vw;
+    height: 30vw;
+    max-width: 150px;
+    max-height: 150px;
+}
+@keyframes flying {
+    0% {
+        bottom: -100px;
+    }
+
+    100% {
+        bottom: 1080px;
+    }
+}
 @media screen and (max-width: 768px) {
     .title {
         font-size: 5em;
