--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,10 @@ button:hover{
   }
 
 @media screen and (max-width: 768px) {
+    body{
+        height: 100vh;
+        width: 100%;
+    }
     .title {
         font-size: 5em;
         font-weight: lighter;
