--- a/styles.css
+++ b/styles.css
@@ -93,12 +93,12 @@ button:hover{
     margin-top: 100px;
     font-size: 6em;
 }
-#timer{
+#score{
     width: 10%;
     position: absolute;
     top: 1vh;
     right: 1.5vh;
-    font-size: 5vw;
+    font-size: 7vw;
     border: 1px solid white;
     border-radius: 3px;
     color: white;
@@ -107,7 +107,7 @@ button:hover{
     justify-content: space-evenly;
 }
 #lives{
-    width: 15%;
+    width: 40%;
     position: absolute;
     top: 1vh;
     left: 0.5vh;
@@ -166,15 +166,16 @@ button:hover{
 }
 .score{
     font-family: 'PlayMe';
-    font-size: 2em;
+    font-size: 3em;
     color:#244cff
 }
 .message{
     font-size: 5em;
-    color: #244cff;
+    color: rgb(36, 76, 255);
 }
 #play-again, #Home{
     font-size: 1.5em;
+    margin-top: 2vw;
 }
 .bullet {
     position: absolute;
@@ -208,7 +209,12 @@ button:hover{
     height: 100vh; 
     position: relative; 
     cursor:none;
-  }
+}
+#highScore{
+    font-size: 5em;
+    font-family: 'PlayMe';
+    color: rgb(36, 76, 255);
+}
 
 @media screen and (max-width: 768px) {
     body{
@@ -245,15 +251,6 @@ button:hover{
     }
     .lists{
         font-size: 2em;
-    }
-    #lives{
-        left:15vw
-    }
-    #gameboard {
-        width: 100%;
-        height: 100vh; 
-        position: relative; 
-        overflow: hidden; 
     }
     .asteroid {
         position: absolute;
