--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @font-face {
-    font-family:"melvin";
+    font-family:"arcade";
     src: url("./assets/ARCADE.TTF");
 }
 @font-face {
     font-family: "PlayMe" ;
     src: url("./assets/PlayMeGames-Demo.otf");
 }
+/* Font credits to 1001 fonts website */
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -28,9 +30,9 @@ body{
     text-align: center;
 }
 .title{
-    font-size: 10vw;
+    font-size: 12vw;
     margin-bottom: 2vw;
-    font-family: 'melvin',sans-serif;
+    font-family: 'arcade',sans-serif;
     /* w4schools */
     background: linear-gradient(to right, #303030, 
     #5359aa, #535353, #3b4d9e);
@@ -39,6 +41,8 @@ body{
     font-weight: lighter;
     
 }
+/* 
+button inspired from various retro button styles */
 button{
     font-family: 'PlayMe';
     margin-top: 4vw;
@@ -121,7 +125,6 @@ button:hover{
 }
 #instruct{
     position: fixed;
-    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
@@ -129,7 +132,6 @@ button:hover{
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
-
     z-index: 999;
 
 }
@@ -144,11 +146,11 @@ button:hover{
     background-color: #808080;
     padding: 20px;
     max-width: 80%;
-    box-shadow: inset 0 0 17px rgba(39, 57, 136, 0.76), 0 0 17px 8px rgba(39, 57, 136, 0.76) ;
+    box-shadow: inset 0 0 17px rgba(39, 57, 136, 0.76), 0 0 17px 8px rgba(39, 57, 136, 0.76) ; /*inset makes shodows inside*/
 }
 .lists{
     font-size: 3em;
-    font-family: 'melvin';
+    font-family: 'arcade';
     font-weight: lighter;
     color: #0d1229;
 
@@ -269,7 +271,7 @@ button:hover{
         height: 60px;
         bottom: 0;
         left: 50%;
-        transform: translateX(-50%); /* center the spaceship initially */
+        transform: translateX(-50%);
         
       } 
     .over{
